--- a/1.HTML
+++ b/1.HTML
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <Title>How to make Cocktail</Title>
+  <Title>Best 3 Cocktails in the world</Title>
   <meta charset="utf-8"</meta>
 </head>
 
