--- a/index.HTML
+++ b/index.HTML
@@ -8,9 +8,9 @@
 <body>
   <h1>Best 3 Cocktails in the world</h1>
   <ol>
-    <li><a href="1.html">Jin tonic</a></li>
-    <li><a href="2.html">Long Island iced tea</a></li>
-    <li><a href="3.html">Martini</a></li>
+    <li><a href="1.HTML">Jin tonic</a></li>
+    <li><a href="2.HTML">Long Island iced tea</a></li>
+    <li><a href="3.HTML">Martini</a></li>
   </ol>
   <h1><a href="https://en.wikipedia.org/wiki/Cocktail" target="_blank" title="wiki page">What is Cocktail?</a></h1>
   <p>A cocktail is an alcoholic mixed drink, which is either a combination of spirits, or one or more spirits mixed with other ingredients such as fruit juice, flavored syrup, or cream. There are various types of cocktails, based on the number and kind of ingredients added. The origins of the cocktail are debated. </p>
