--- a/1.HTML
+++ b/1.HTML
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-  <h1><a href="index.html">Home으로 돌아가기</a></h1>
+  <h1><a href="index.HTML">Home으로 돌아가기</a></h1>
   <ol>
-    <li><a href="1.html">Jin tonic</a></li>
-    <li><a href="2.html">Long Island iced tea</a></li>
-    <li><a href="3.html">Martini</a></li>
+    <li><a href="1.HTML">Jin tonic</a></li>
+    <li><a href="2.HTML">Long Island iced tea</a></li>
+    <li><a href="3.HTML">Martini</a></li>
   </ol>
   <h1>Jin tonic 만드는 법</h1>
   <strong><a href="https://en.wikipedia.org/wiki/Gin_and_tonic" target="_blank" title="wiki page">Jin tonic</a></strong> is one of tranditional <u>long drink cocktail</u> in the world. it can be made very simple and easy - just with Jin, Tonic, Lime or Lemon
