--- a/2.HTML
+++ b/2.HTML
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-  <h1><a href="index.html">Home으로 돌아가기</a></h1>
+  <h1><a href="index.HTML">Home으로 돌아가기</a></h1>
   <ol>
-    <li><a href="1.html">Jin tonic</a></li>
-    <li><a href="2.html">Long Island iced tea</a></li>
-    <li><a href="3.html">Martini</a></li>
+    <li><a href="1.HTML">Jin tonic</a></li>
+    <li><a href="2.HTML">Long Island iced tea</a></li>
+    <li><a href="3.HTML">Martini</a></li>
   </ol>
   <h1>Long Island iced tea 만드는 법</h1>
   <strong><a href="https://en.wikipedia.org/wiki/Long_Island_iced_tea" target="_blank" title="wiki page">Long Island iced tea</a></strong> is a type of alcoholic mixed drink typically made with vodka, tequila, light rum, triple sec, gin, and a splash of cola, which gives the drink the same amber hue as its namesake.
