--- a/3.HTML
+++ b/3.HTML
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-  <h1><a href="index.html">Home으로 돌아가기</a></h1>
+  <h1><a href="index.HTML">Home으로 돌아가기</a></h1>
   <ol>
-    <li><a href="1.html">Jin tonic</a></li>
-    <li><a href="2.html">Long Island iced tea</a></li>
-    <li><a href="3.html">Martini</a></li>
+    <li><a href="1.HTML">Jin tonic</a></li>
+    <li><a href="2.HTML">Long Island iced tea</a></li>
+    <li><a href="3.HTML">Martini</a></li>
   </ol>
   <h1>Martini 만드는 법</h1>
   <strong><a href="https://en.wikipedia.org/wiki/Martini_(cocktail)" target="_blank" title="wiki page">Martini</a></strong> is a cocktail made with gin and vermouth, and garnished with an olive or a lemon twist. Over the years, the martini has become one of the best-known mixed alcoholic beverages.
